--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,13 +12,17 @@ body {
     user-select: none;
     
 }
-
+header {
+    font-size: 60px;
+    text-align: center;
+    padding-top: 10px;
+}
 .counter {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    min-height: 100vh;
+    min-height: 82vh;
     
 }
 
@@ -90,4 +94,15 @@ button {
             height: 40px;
             font-size: 18px;
             transition: 0.15s ease;
+}
+
+footer {
+    padding-top: 69px;
+    font-size: 16px;
+    text-align: center;
+}
+
+footer a {
+    color: #041b2d;
+    text-decoration: none;
 }
